wk_taa_taaqa/src/objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>DTN__c</fullName>
        <formula>User.DTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_SA__c</fullName>
        <formula>ISPICKVAL(TeamMemberRole, &quot;SA - Solution Architect&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has SA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Am_SA__c</fullName>
        <formula>($User.FirstName + &quot; &quot; + $User.LastName ) = (User.FirstName + &quot; &quot; + User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I Am SA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>($User.FirstName + &quot; &quot; + $User.LastName ) =  Team_Member_Manager__c  || 
($User.FirstName + &quot; &quot; + $User.LastName ) =   Team_Member_Upper_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Member_Manager__c</fullName>
        <formula>User.Manager_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_SAP_DTN__c</fullName>
        <formula>User.SAP_DTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member SAP DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Upper_Management__c</fullName>
        <formula>User.Upper_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Upper Management</label>
        <type>Text</type>
    </fields>
</CustomObject>